# dups_remover

./: README.md  duplicates_remover.py  duplicates_scanner.py  file_system_adapter.py  files_registry.py  hash_util.py  main.py  pyproject.toml
dups_replacer/: duplicates_remover.py  duplicates_scanner.py  files_registry.py  hash_util.py  main.py
tests/: file_registry_test.py
tests/duplicate_scanning_test/: duplicates_scanning_test.py  mock_fs_adapter.py
tests/utils/: mocks_util.py
