[tool.poetry]
name = "dups-replacer"
version = "0.1.0"
description = ""
authors = ["Sagi Levi <lesagi@gmail.com>"]

[tool.poetry.scripts]
start = "dups_replacer.main:main"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
